# libsaltpack-jni

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  README.md  gen_headers.sh  pom.xml  ruleset.xml
.github/workflows/: build.yaml
android/: .gitignore  compile.sh
android/jni/: Android.mk  Application.mk
android/sp/: Android.mk  Application.mk
cmake_modules/: FindLibSaltpack.cmake  FindLibsodium.cmake
docs/: CNAME  allclasses-frame.html  allclasses-index.html  allclasses-noframe.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-list  package-search-index.js  serialized-form.html  type-search-index.js
docs/com/gherynos/libsaltpack/: Constants.html  InputParameters.html  Loader.html  MessageReader.html  MessageWriter.html  OutputParameters.html  SaltpackException.html  Utils.html  package-summary.html  package-tree.html
docs/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
docs/net/nharyes/libsaltpack/: Constants.html  InputParameters.html  Loader.html  MessageReader.html  MessageWriter.html  OutputParameters.html  SaltpackException.html  Utils.html  package-frame.html  package-summary.html  package-tree.html
src/main/cpp/: InputStreamWrapper.cpp  OutputStreamWrapper.cpp  com_gherynos_libsaltpack_MessageReader.cpp  com_gherynos_libsaltpack_MessageWriter.cpp  com_gherynos_libsaltpack_Utils.cpp  net_nharyes_libsaltpack_MessageReader.cpp  net_nharyes_libsaltpack_MessageWriter.cpp  net_nharyes_libsaltpack_Utils.cpp
src/main/cpp/include/: common.h  (+8 more)
src/main/resources/: .gitignore
(+32 files in other folders)
